# logrepl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh
config/testing/: mydb.ini
logrepl/: __main__.py  config.py  db.py  logrepl.py  metrics.py
logrepl/commands/: client.py  metrics.py  pgbench.py  schema.py  setup.py  status.py  teardown.py  verify.py
postgresql/15/: Dockerfile
